--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
     path: ../flutter_clock_helper
   cupertino_icons: ^0.1.2
   simple_animations: ^1.3.4
+  flare_flutter: ^1.7.3
+
 
 dev_dependencies:
   flutter_test:
@@ -19,10 +21,18 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
   fonts:
     - family: PressStart2P
       fonts:
         - asset: third_party/PressStart2P-Regular.ttf
+    - family: JosefinSans
+      fonts:
+        - asset: third_party/JosefinSans-Regular.ttf
     - family: Monoton
       fonts:
         - asset: third_party/Monoton-Regular.ttf
+    - family: Tomorrow
+      fonts:
+        - asset: third_party/Tomorrow-Regular.ttf
